Separando metodos da pagina home